[package]
name = "tk-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
tcl-sys = { version = "0.1.0", path = ".." }
x11 = "2.20.0"

[build-dependencies]
bindgen = { version = "0.63.0", default-features = false, features = ["runtime"] }
pkg-config = "0.3.26"
