[package]
name = "tk-sys"
documentation = "https://docs.rs/tk_sys/0.1.0/"
description = "bindings to Tk graphics library"
categories = ["graphics", "gui", "compilers", "external-ffi-bindings"]
keywords = ["bindings", "tcl", "tk", "script", "scripting"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"
tcl-sys = { version = "0.1.0", path = "../tcl-sys" }
x11 = "2.20.1"

[build-dependencies]
bindgen = { version = "0.63.0", default-features = false, features = ["runtime"] }
pkg-config = "0.3.26"
